[package]
name = "subilo"
version = "0.1.2"
description = "Tiny deployment agent"
authors = ["gillchristian <gillchristiang@gmail.com>", "ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/huemul/subilo"
repository = "https://github.com/huemul/subilo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2.0"
actix-files = "0.2.2"
actix-http = "1.0.1"
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-web-httpauth = "0.4.1"
async-std = "1.6.3"
chrono = "0.4"
clap = "2.33.3"
env_logger = "0.7"
jsonwebtoken = "7.2.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
shellexpand = "2.0"
thiserror = "1.0.20"
toml = "0.5"
futures = "0.3.5"
actix = "0.9.0"
rusqlite = { version = "0.23.1", features = ["serde_json"] }
nanoid = "0.3.0"
refinery = { version = "0.3", features = ["rusqlite"] }
