[package]
name = "subilo"
version = "0.2.1"
description = "Tiny deployment agent"
authors = ["gillchristian <gillchristiang@gmail.com>", "ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/huemul/subilo"
repository = "https://github.com/huemul/subilo"

[dependencies]
actix-cors = "0.2.0"
actix-http = "1.0.1"
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-web-httpauth = "0.4.1"
chrono = "0.4.0"
clap = "2.33.3"
env_logger = "0.7.0"
jsonwebtoken = "7.2.0"
log = "0.4.0"
serde = "1.0.0"
serde_json = "1.0.0"
shellexpand = "2.0.0"
thiserror = "1.0.20"
toml = "0.5.0"
futures = "0.3.5"
actix = "0.9.0"
rusqlite = { version = "0.23.1", features = ["serde_json"] }
nanoid = "0.3.0"
refinery = { version = "0.3.0", features = ["rusqlite"] }
tokio = { version = "0.2.22", features = ["fs"] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-check", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
